[gd_scene load_steps=3 format=3 uid="uid://5b0kqbde0dta"]

[ext_resource type="Script" path="res://Menus/PlayMenu2D.gd" id="1_005mr"]
[ext_resource type="AudioStream" uid="uid://bald4fr15ru7" path="res://Menus/Audio/boop.wav" id="2_y22hn"]

[node name="PlayMenu2D" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -424.0
offset_right = 256.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("1_005mr")

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(512, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Start"

[node name="OptionsButton" type="Button" parent="."]
custom_minimum_size = Vector2(512, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Settings"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(512, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Back"

[node name="Boop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_y22hn")
pitch_scale = 1.5
bus = &"SFX"

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_y22hn")
pitch_scale = 2.75
bus = &"SFX"

[connection signal="mouse_entered" from="StartButton" to="." method="play_boop"]
[connection signal="pressed" from="StartButton" to="." method="start_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="play_boop"]
[connection signal="pressed" from="OptionsButton" to="." method="options_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="play_boop"]
[connection signal="pressed" from="BackButton" to="." method="back_pressed"]
